# src/controllers/v1/admin/player.controller.js
@@ -51,6 +51,7 @@ module.exports = {
                 pe.coins_total AS points_total,
                 pe.coins_total - pe.coins_balance AS spending_amount,
                 pe.passive_per_hour AS profit_per_hour,
+                CAST(pe.coupons_balance AS FLOAT)/100 AS coupons_balance,
                 CAST(ucc.count AS INTEGER) AS upgraded_card_cnt
             FROM players p
             INNER JOIN player_earnings pe ON pe.player_id = p.id
@@ -88,7 +89,8 @@ module.exports = {
                 points_balance: 0,
                 points_total: 0,
                 spending_amount: 0,
-                profit_per_hour: 0
+                profit_per_hour: 0,
+                coupons_balance: 0,
             };
 
             let playerEarnings = await prisma.playerEarning.findFirst({
@@ -99,6 +101,7 @@ module.exports = {
                 response.points_total = playerEarnings.coins_total;
                 response.spending_amount = playerEarnings.coins_total - playerEarnings.coins_balance;
                 response.profit_per_hour = playerEarnings.passive_per_hour;
+                response.coupons_balance = playerEarnings.coupons_balance / 100;
             }
 
             return res.status(200).json({
